applications/degoog/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: degoog
  labels:
    name: degoog
